midpoint-live-demo/base/kubernetes-objects/addressbook/addressbook.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: addressbook-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: addressbook-db
  template:
    metadata:
      labels:
        app: addressbook-db
    spec:
      volumes:
        - name: sql-script
          configMap:
            name: addressbook-script-map
            defaultMode: 420
      containers:
        - name: addressbook-db
          image: 'postgres:13-alpine'
          ports:
            - name: db
              containerPort: 5432
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: sql-script
              mountPath: /docker-entrypoint-initdb.d
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  serviceName: addressbook-db-service
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
