midpoint-live-demo/base/kubernetes-objects/addressbook/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addressbook-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: addressbook-be
  template:
    metadata:
      labels:
        app: addressbook-be
    spec:
      volumes:
        - name: wait-for-it
          configMap:
            name: keycloak-wait-script-map
            defaultMode: 0555
        - name: addressbook-db-init
          # init of addressbook db
          configMap:
            name: addressbook-script-map
            defaultMode: 0555            
      containers:
        - name: addresbook-be
          image: 'inalogy/addressbook-be'
          ports:
            - name: be
              containerPort: 8000
              protocol: TCP
      restartPolicy: Always
