midpoint-live-demo/base/kubernetes-objects/addressbook/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addressbook-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: addressbook-fe
  template:
    metadata:
      labels:
        app: addressbook-fe
    spec:
      containers:
        - name: addresbook-fe
          image: 'inalogy/addressbook-fe'
          ports:
            - name: fe 
              containerPort: 8081
              protocol: TCP
      restartPolicy: Always
