midpoint-live-demo/base/kubernetes-objects/addressbook/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: addressbook-be-service
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: addressbook-be
  type: ClusterIP
  sessionAffinity: None
