midpoint-live-demo/base/kubernetes-objects/addressbook/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: addressbook-fe-service
spec:
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: addressbook-fe
  type: ClusterIP
  sessionAffinity: None
