midpoint-live-demo/base/kubernetes-objects/addressbook/service.yml
apiVersion: v1
kind: Service
metadata:
  name: addressbook-service
spec:
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  selector:
    app: addressbook
  type: ClusterIP
  sessionAffinity: None
