midpoint-live-demo/base/kubernetes-objects/addressbook/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: addressbook-ingress
  annotations: 
    kubernetes.io/ingress.class: azure/application-gateway
spec:
#  ingressClassName: haproxy
  tls:
    - hosts:
        - addressbook.domain
      secretName: cert-mp-demo
  rules:
    - host: addressbook.domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: addressbook-service
                port:
                  number: 8082
